[Service Runner] Don't use KRun::runService

It blocks KRunner while the application is loading and in some cases
(like Kate's session selection dialog) might never return.

BUG: 361917
FIXED-IN: 5.7.0

Differential Revision: https://phabricator.kde.org/D1769